# ifcpp

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/ifcpp/: ModelLoader.h
include/ifcpp/Geometry/: Adapter.h  CAdapter.h  CVector.h  Common.h  Curve.h  CurveConverter.h  Extruder.h  GeomUtils.h  Geometry.h  GeometryConverter.h  GeometryGenerator.h  Helpers.h  Matrix.h  Parameters.h  PrimitiveTypesConverter.h  PrimitivesConverter.h  Profile.h  ProfileConverter.h  Solid.h  SolidConverter.h  SplineConverter.h  Style.h  StyleConverter.h  Utils.h  Vector.h  VectorAdapter.h  VisualObject.h  csgjs.h
include/ifcpp/Ifc/: IfcAbsorbedDoseMeasure.h  IfcAccelerationMeasure.h  IfcActionRequest.h  IfcActionRequestTypeEnum.h  IfcActionSourceTypeEnum.h  IfcActionTypeEnum.h  IfcActor.h  IfcActorRole.h  IfcActorSelect.h  IfcActuator.h  IfcActuatorType.h  IfcActuatorTypeEnum.h  IfcAddress.h  IfcAddressTypeEnum.h  IfcAdvancedBrep.h  IfcAdvancedBrepWithVoids.h  IfcAdvancedFace.h  IfcAirTerminal.h  IfcAirTerminalBox.h  IfcAirTerminalBoxType.h  IfcAirTerminalBoxTypeEnum.h  IfcAirTerminalType.h  IfcAirTerminalTypeEnum.h  IfcAirToAirHeatRecovery.h  IfcAirToAirHeatRecoveryType.h  IfcAirToAirHeatRecoveryTypeEnum.h  IfcAlarm.h  IfcAlarmType.h  IfcAlarmTypeEnum.h  IfcAlignment.h  IfcAlignmentCant.h  IfcAlignmentCantSegment.h  IfcAlignmentCantSegmentTypeEnum.h  IfcAlignmentHorizontal.h  IfcAlignmentHorizontalSegment.h  IfcAlignmentHorizontalSegmentTypeEnum.h  IfcAlignmentParameterSegment.h  IfcAlignmentSegment.h  IfcAlignmentTypeEnum.h  IfcAlignmentVertical.h  (+1274 more)
include/ifcpp/Ifc/Factories/: EntityFactory.h  TypeFactory.h
include/ifcpp/Model/: AttributeObject.h  BasicTypes.h  BuildingModel.h  BuildingObject.h  OpenMPIncludes.h  StatusCallback.h  UnitConverter.h
include/ifcpp/Reader/: ReaderSTEP.h  ReaderUtil.h
include/ifcpp/Writer/: WriterSTEP.h  WriterUtil.h
src/Geometry/: Common.cpp  Curve.cpp  Extruder.cpp  Geometry.cpp  Solid.cpp  Style.cpp  csgjs.cpp
src/Ifc/: IfcAbsorbedDoseMeasure.cpp  IfcAccelerationMeasure.cpp  IfcActionRequest.cpp  IfcActionRequestTypeEnum.cpp  IfcActionSourceTypeEnum.cpp  IfcActionTypeEnum.cpp  IfcActor.cpp  IfcActorRole.cpp  IfcActorSelect.cpp  IfcActuator.cpp  IfcActuatorType.cpp  IfcActuatorTypeEnum.cpp  IfcAddress.cpp  IfcAddressTypeEnum.cpp  IfcAdvancedBrep.cpp  IfcAdvancedBrepWithVoids.cpp  IfcAdvancedFace.cpp  IfcAirTerminal.cpp  IfcAirTerminalBox.cpp  IfcAirTerminalBoxType.cpp  IfcAirTerminalBoxTypeEnum.cpp  IfcAirTerminalType.cpp  IfcAirTerminalTypeEnum.cpp  IfcAirToAirHeatRecovery.cpp  IfcAirToAirHeatRecoveryType.cpp  IfcAirToAirHeatRecoveryTypeEnum.cpp  IfcAlarm.cpp  IfcAlarmType.cpp  IfcAlarmTypeEnum.cpp  IfcAlignment.cpp  IfcAlignmentCant.cpp  IfcAlignmentCantSegment.cpp  IfcAlignmentCantSegmentTypeEnum.cpp  IfcAlignmentHorizontal.cpp  IfcAlignmentHorizontalSegment.cpp  IfcAlignmentHorizontalSegmentTypeEnum.cpp  IfcAlignmentParameterSegment.cpp  IfcAlignmentSegment.cpp  IfcAlignmentTypeEnum.cpp  IfcAlignmentVertical.cpp  (+1274 more)
src/Ifc/Factories/: EntityFactory.cpp  TypeFactory.cpp
src/Model/: BuildingGuid.cpp  BuildingModel.cpp  UnitConverter.cpp
src/Reader/: ReaderSTEP.cpp  ReaderUtil.cpp
src/Writer/: WriterSTEP.cpp  WriterUtil.cpp
